# gnomeschesser

./: .gitignore  .gitmodules  README.md  flake.nix  parsePsqt.ts  psqt.txt
.github/workflows/: build.yml  sprt.yml  test.yml
dev_utils/book-tabularizer/: .gitignore  Makefile  README.md  batch-polyglot.sh  batch-tabularize.sh  data.gleam  deno.json  group.c  meson.build  tabularize.ts
dev_utils/book-tabularizer/polyglot-operator/: code_generator.c  code_generator.h  main.c  merge.c  merge.h  polyglot.c  polyglot.h
dev_utils/book-tabularizer/src/: argparse.h  chess.c  chess.h  main.c  main.cc  pg_builder.cc  pg_builder.h  polyglot.cc  polyglot.h  splitmix64.c  splitmix64.h  tinylogger.h  util.cc  util.h  zobrist.c  zobrist.h
dev_utils/chess-tui/: deno.json  main.ts
dev_utils/logwrap/: .gitignore  Makefile
dev_utils/reliability-checks/: deno.json  main.ts
dev_utils/scripts/: start-docker-uci.sh  start-uci.sh
dev_utils/uci-adapter/: .gitignore  deno.json  start.sh
dev_utils/web-client/: deno.json
erlang_template/: Dockerfile  README.md  gleam.toml  manifest.toml  pre-2025-03-11.Dockerfile
erlang_template/src/: blake_probe.gleam  erlang_template.gleam  erlang_template_uci.gleam  evaluation_probe.gleam  openings_probe.gleam  probe.gleam  uci_server.gleam  web_server.gleam
erlang_template/test/: erlang_template_test.gleam  perft_timing.gleam  (+1 more)
javascript_template/: Dockerfile  README.md  gleam.toml  manifest.toml  pre-2025-03-11.Dockerfile
manual/: README.md  gleam.toml  manifest.toml
testing_utils/: .mise.toml  deno.json  main.ts  main_test.ts
(+127 files in other folders)
